create page done

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,10 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-lato: var(--font-lato);
+  --font-roboto: var(--font-roboto);
+  --font-playwrite_CU: var(--font-playwrite_CU);
+  
 }
 
 @media (prefers-color-scheme: dark) {
